--- a/localisation/braz_por/MD_focus_BLR_l_braz_por.yml
+++ b/localisation/braz_por/MD_focus_BLR_l_braz_por.yml
@@ -25,7 +25,7 @@
  BLR_AES: "Central Nuclear Bielorrussa"
  BLR_AES_desc: "Finalmente construiremos nossa própria central nuclear"
  BLR_Chinese_kal: "Acordo Comercial com a China"
- BLR_Chinese_kal_desc: "We will conclude a trade agreement with China, which will allow us to increase the production capacity of GrodnoAzot"
+ BLR_Chinese_kal_desc: "Concluiremos um acordo comercial com a China, que nos permitirá aumentar a capacidade de produção de Grodno Azot"
  BLR_Chinese_zdania: "Construção de Novas Fábricas"
  BLR_Chinese_zdania_desc: "O governo chinês está aumentando os investimentos em nosso país e está pronto para construir novas fábricas"
  BLR_Chinese_konfuci: "Institutos Confúcio"
