--- a/localisation/braz_por/MD_focus_CUB_l_braz_por.yml
+++ b/localisation/braz_por/MD_focus_CUB_l_braz_por.yml
@@ -483,7 +483,7 @@
  CUB_industry_expansion_desc: "Depois de anos de inatividade, nossa indústria está em péssimo estado, precisamos urgentemente reconstruí-la."
  CUB_new_economic_politics: "Novo Sistema Econômico"
  CUB_new_economic_politics_desc: "Um novo Cuba, um novo sistema econômico."
- CUB_anti_lgbt: "Anti LGBT"
+ CUB_anti_lgbt: "Anti-LGBT"
  CUB_anti_lgbt_desc: "LGBT é uma doença."
  CUB_purge_democrats: "Reprimir Democratas"
  CUB_purge_democrats_desc: "Democratas assim como comunistas representam um perigo para a sociedade, precisamos destruí-los e qualquer um que os apoie."
