--- a/localisation/braz_por/MD_focus_EU_l_braz_por.yml
+++ b/localisation/braz_por/MD_focus_EU_l_braz_por.yml
@@ -41,7 +41,7 @@
  EUU_european_debt_crisis: "A §YCrise da Dívida Europeia§! Ocorreu"
  EU_potential: "[ROOT.GetNamewithFlag] é um Membro Potencial da UE"
  EU_candidate: "[ROOT.GetNamewithFlag] é um Membro Candidato da UE"
- EUU_migrant_crisis_triggered: "§YMigrant Crisis in Europe§! Triggered"
+ EUU_migrant_crisis_triggered: "§YCrise Migratória na Europa§!Provocado"
  european_constitution: "Constituição Europeia"
  treaty_of_lisbon: "Tratado de Lisboa"
  EU_UNSC: "Assento da UE no Conselho de Segurança das Nações Unidas"
@@ -50,7 +50,7 @@
  EU_main_background_window_inner_title: "§CA União Europeia§!"
  EU_population_tooltip: "[EUU.GetFlag] População Total: [?global.var_EUpopTotalDisplay|Y]§YM§!"
  EU_budget_category_tt: "PIB da União Europeia: [?global.EU_gdp|§Y0] bilhões\nPIB/C: [?global.EU_gdp_capita|§Y]k\n\n§YQuadro Financeiro Plurianual:§!\nRascunho: [EU_mff_draft] [draft_status_EU_mff]\nTotal de PP investido: [?global.EU_mff_draft_invested_PP|§Y0]\nTotal: [?global.EU_mff_total|§G2] bilhões\npor ano:\nTaxa de chamada do orçamento da UE com base no PIB: [?global.EU_budget_call_rate|§C2]§C%§! \nOrçamento anual total da UE: [?global.EU_total_budget|§G2] bilhões\n[EU_contribution_member_states]\n\n§YOrçamento do próximo ano fiscal:§!\nRascunho: [EU_budget_draft] [draft_status_EU_budget]\nTotal de PP investido: [?global.EU_budget_draft_invested_PP|§Y0]\n\nDespesa: [?global.EU_total_exp|§G2] bilhões\nCategoria - Total - Proporção\n§OCrescimento§!: [?global.EU_growth_exp_total|§Y0] bilhões - [?global.EU_growth_exp_ratio|§O%2]\n§GRecursos naturais§!: [?global.EU_natural_exp_total|§Y0] bilhões - [?global.EU_natural_exp_ratio|§G%2]\n§LEuropa Global§!: [?global.EU_global_exp_total|§Y0] bilhões - [?global.EU_global_exp_ratio|§L%2]\n§gAdministração, segurança e cidadania§!: [?global.EU_admin_exp_total|§Y0] bilhões - [?global.EU_admin_exp_ratio|§g%2]\n[EU_distribution_member_states]\n"
- eu_gui_tooltip: "§C[EUU.GetNameWithFlag]§! Interface"
+ eu_gui_tooltip: "§C[EUU.GetNameWithFlag]§!Interface"
  eu_gui_tooltip_delayed: "Abre a tela que contém todas as informações sobre §C[EUU.GetNameWithFlag]§! incluindo o Parlamento Europeu, os Titulares de Cargos da União Europeia, o Conselho da União Europeia e o Orçamento Europeu."
  fiscal_button_title: "Orçamento da UE"
  fiscal_button_desc: "O orçamento de §C[EUU.GetNameWithFlag]§!. A tela lida com tudo o que inclui o Quadro Financeiro Plurianual e o orçamento do próximo ano fiscal."
@@ -567,7 +567,7 @@
  council_vote_button_delayed_tt: "[current_active_vote_desc]"
  west_auto_tt: "§HPré-requisitos:§!\n[!PG_Western_Autocracy_influence_click_enabled]"
  liberalism_tt: "§HPré-requisitos:§!\n[!PG_liberalism_influence_click_enabled]"
- socalism_tt: "§HPrerequisites:§!\n[!PG_socialism_influence_click_enabled]"
+ socalism_tt: "§HPré-requisitos:§!\n[!PG_socialism_influence_click_enabled]"
  commie_state_tt: "§HPré-requisitos:§!\n[!PG_Communist_State_influence_click_enabled]"
  anarcho_commie_tt: "§HPré-requisitos:§!\n[!PG_anarchist_communism_influence_click_enabled]"
  Conserve_tt: "§HPré-requisitos:§!\n[!PG_Conservative_influence_click_enabled]"
@@ -804,9 +804,9 @@
  EUevent.21.t: "Um Gabinete Está Vago"
  EUevent.21.d: "Uma vaga agora está disponível, seja por aposentadoria de um gabinete ou pelo término do mandato do assento. O gabinete permanecerá vago para a IA pelos próximos quatorze dias, a partir daí a IA buscará ocupar o assento. Consulte a tela de Gabinete da União Europeia."
  EUevent.21.a: "Obrigado pela Dica!"
- EUevent.22.t: "The Migrant Crisis in Europe"
- EUevent.22.d: "The various wars in Africa and the Middle East, the rise of Radical Jihadism, and more have caused many people to flee their homes. The unrest and instability amongst these war-torn nations have caused a displacement the likes of which we haven't seen in decades. Thousands of migrants have begun to flock toward the European Union seeking asylum and refugee status. Nations on the periphery of the Union are already mobilizing border guards and police to stem the tide of the migrants, but they are looking to the Union to employ permanent measures. Some temporary solutions include striking a deal with Turkey to house some of the migrants, and others are looking to impose a more permanent agency like the European Asylum Agency to handle the tide. The one thing that is for certain is that it must be dealt with quickly and efficiently."
- EUevent.22.a: "A New Crisis Begins."
+ EUevent.22.t: "A crise migratória na Europa"
+ EUevent.22.d: "As várias guerras em África e no Médio Oriente, a ascensão do Jihadismo Radical e muito mais fizeram com que muitas pessoas fugissem das suas casas. A agitação e a instabilidade entre estas nações devastadas pela guerra causaram um deslocamento como não víamos há décadas. Milhares de migrantes começaram a migrar para a União Europeia em busca de asilo e estatuto de refugiado. As nações da periferia da União já estão a mobilizar guardas de fronteira e a polícia para conter a onda de migrantes, mas esperam que a União empregue medidas permanentes. Algumas soluções temporárias incluem chegar a um acordo com a Turquia para acolher alguns dos migrantes, e outras procuram impor uma agência mais permanente como a Agência Europeia de Asilo para lidar com a maré. A única coisa certa é que deve ser resolvido de forma rápida e eficiente."
+ EUevent.22.a: "Uma nova crise começa."
  EUelection.1.t: "Eleições para o Parlamento Europeu de [GetYear]"
  EUelection.1.d: "As eleições para o Parlamento Europeu ocorrem a cada cinco anos."
  EUelection.1.a: "Ok!"
@@ -1004,8 +1004,8 @@
  EUU_voting_rights_suspended_desc: "Nossos direitos de voto na União Europeia foram suspensos devido a violações repetidas dos valores europeus. Está na hora de mudarmos a direção que estamos levando nosso país ou explorarmos a possibilidade de sair da União."
  EUU_subsidies_suspended: "Suspensão de Subsídios da UE"
  EUU_subsidies_suspended_desc: "Os subsídios da União Europeia que estávamos recebendo foram suspensos. A mudança repentina em nosso orçamento levará um tempo para nos acostumarmos, e devemos buscar remediar a situação para aproveitar novamente os subsídios alocados para nós."
- Migrant_Crisis_Europe: "Migrant Crisis"
- Migrant_Crisis_Europe_desc: "The Migrant Crisis has hit Europe like a hammer, pounding away at both national unity and the popularity of ruling parties. The war in Syria has caused thousands of refugees to flee to neighboring countries, and although Europe stood at the ready to accept those suffering from war, the amount of new and permanent migrants from all over North Africa and the Middle East has overwhelmed Europe's institutions and made many resent the newcomers."
+ Migrant_Crisis_Europe: "Crise Migratória"
+ Migrant_Crisis_Europe_desc: "A crise migratória atingiu a Europa como um martelo, destruindo tanto a unidade nacional como a popularidade dos partidos no poder. A guerra na Síria fez com que milhares de refugiados fugissem para países vizinhos e, embora a Europa estivesse preparada para aceitar aqueles que sofrem com a guerra, a quantidade de migrantes novos e permanentes de todo o Norte de África e do Médio Oriente sobrecarregou as instituições da Europa e fez com que muitos se ressentissem dos recém-chegados."
  euro_army: "Exército Europeu"
  euro_navy: "Marinha Europeia"
  EU_office_category: "Escritórios da União Europeia"
