--- a/localisation/braz_por/MD_focus_FRA_l_braz_por.yml
+++ b/localisation/braz_por/MD_focus_FRA_l_braz_por.yml
@@ -94,7 +94,7 @@
  FRA_euroscepticsm_desc: "A Europa empurrou suas ideologias opressivas sobre nós por tempo demais. O empurrar por uma União Europeia mais forte apenas reduzirá nossa autonomia."
  FRA_electoral_shutdown: "Fechamento Eleitoral"
  FRA_electoral_shutdown_desc: "Eleições são uma política de tolos. Feche-as. Não podemos permitir que nosso povo seja influenciado por palavras vazias. Um pouco de manipulação pode colocar as pessoas certas no comando."
- FRA_heavier_policing: "Gendarmerie Nationale"
+ FRA_heavier_policing: "Gendarmaria Nacional"
  FRA_heavier_policing_desc: "A polícia militar no momento é boa. No entanto, podemos torná-los melhores formando-os em unidades pseudo para reprimir a dissidência e promover nossas ideologias."
  FRA_self_determination: "Autodeterminação"
  FRA_self_determination_desc: "O único país no mundo que importa é a França. Nada mais, nada menos."
@@ -216,7 +216,7 @@
  FRA_the_french_army_desc: "A 'Armée de Terre', ou Exército Francês, é uma das três principais divisões de nossas forças armadas. As realizações de nosso exército são cantadas por toda parte. As forças devem continuar a ser honradas e expandir para impulsionar nosso país ainda mais."
  FRA_the_french_air_force: "Força do ar"
  FRA_the_french_air_force_desc: "Nossa força aérea está entre uma das mais antigas do mundo. O primeiro contingente de poder aéreo francês foi formado em 1909 como uma ala do exército francês. Agora, é sua própria ala independente, e exportamos um dos melhores poderes aéreos do mundo."
- FRA_french_navy: "Marine Nationale"
+ FRA_french_navy: "Marinha"
  FRA_french_navy_desc: "A Marinha Francesa ajudou a impulsionar nossas ambições e desejos em escala global. Ela ajudou a fundar um dos maiores impérios coloniais do mundo, ao lado dos espanhóis e ingleses. Investir nisso nos permitirá projetar ainda mais no exterior."
  FRA_amx_leclerc: "AMX Leclerc"
  FRA_amx_leclerc_desc: "O AMX Leclerc e seus sucessores são a classe de MBT do exército francês. É robusto e versátil, como a maioria dos tanques modernos. Investir ainda mais em seu desenvolvimento pode impulsionar nosso corpo blindado."
@@ -240,7 +240,7 @@
  FRA_forward_air_bases_desc: "Para nos prepararmos para qualquer cenário, devemos construir nossas bases aéreas avançadas para garantir planos ofensivos ou defensivos devidamente planejados."
  FRA_mirage_2000d: "Mirage 2000D"
  FRA_mirage_2000d_desc: "O Mirage 2000D é uma aeronave de ataque comum que nos serviu fielmente desde sua concepção. Buscar planos futuros e melhores só honrará o legado do Mirage."
- FRA_carrier_fighters: "Rafale Marine"
+ FRA_carrier_fighters: "Marinha Rafale"
  FRA_carrier_fighters_desc: "O Rafale Marine é uma versão de porta-aviões do comum caça Rafale. Ele possui uma construção semelhante à sua variante terrestre. No geral, o caça é um monstro na batalha pelos mares."
  FRA_med_naval_bases: "Bases Navais do Mediterrâneo"
  FRA_med_naval_bases_desc: "A Córsega é um território ideal para uma base naval aprimorada. Ela está isolada do continente e é relativamente defensável."
