--- a/localisation/braz_por/MD_focus_GEO_l_braz_por.yml
+++ b/localisation/braz_por/MD_focus_GEO_l_braz_por.yml
@@ -546,7 +546,7 @@
  GEO_rm70_TT: "A República Tcheca nos venderá 20 unidades de armas antiaéreas."
  GEO_vz_TT: "A República Tcheca nos venderá 50 unidades de artilharia."
  GEO_fin_snipes_desc: "Nosso exército está ficando maior e mais forte, muitos países estão apoiando-nos, e a Finlândia é um deles. Eles venderão equipamentos de infantaria para nós!"
- GEO_cuguar: "Cuguar"
+ GEO_cuguar: "Puma"
  GEO_cuguar_desc: "Os Estados Unidos da América estão ajudando muitos países, e agora somos um dos países que estão recebendo ajuda. Compraremos veículos utilitários deles, mas isso terá um custo!"
  GEO_fgm148: "FGM148"
  GEO_fgm148_desc: "Os EUA querem nos ajudar novamente, agora compraremos mísseis antitanque."
@@ -576,7 +576,7 @@
  GEO_german_guns_desc: "Compraremos armas da Alemanha."
  GEO_turkish_pvo: "Sistemas de Defesa Aérea Turcos"
  GEO_turkish_pvo_desc: "Compraremos armas da Turquia."
- GEO_nato_standards_bases: "NATO standards bases"
+ GEO_nato_standards_bases: "Bases de padrões da OTAN"
  GEO_nato_standards_bases_desc: "Sempre podemos melhorar as nossas relações com os EUA!"
  GEO_antitank_stuff: "Armas Antitanque dos EUA"
  GEO_antitank_stuff_desc: "Precisamos comprar mais armas antitanque, e os EUA concordaram em nos vender algumas delas."
@@ -851,7 +851,7 @@
  GEO_azot_combinat: "Combinado Azot"
  GEO_marneuli_plant: "Fábrica de Marneuli"
  GEO_mahindra: "Mahindra"
- GEO_geopromining: "GeoProMining"
+ GEO_geopromining: "GeoProMineração"
  GEO_gold_extract: "Aumentar a Extração de Ouro"
  GEO_nationalize_gold: "Nacionalizar Ouro"
  GEO_gold_privat: "Privatização de Ouro"
