--- a/localisation/braz_por/MD_focus_ITA_l_braz_por.yml
+++ b/localisation/braz_por/MD_focus_ITA_l_braz_por.yml
@@ -2128,7 +2128,7 @@
  ITA_building_abuse_1_tt: "População e Renda Corporativa: §R-5%§!"
  ITA_unsustainable_pension_system_1: "Sistema de Pensão Caro"
  ITA_unsustainable_pension_system_2: "Sistema de Pensão Insustentável"
- ITA_unsustainable_pension_system_3: "Quota 100"
+ ITA_unsustainable_pension_system_3: "Cota 100"
  ITA_unsustainable_pension_system_4: "Novas Pensões para Bebês"
  ITA_unsustainable_pension_system_1_desc: "Nossas reformas recentes melhoraram ligeiramente a sustentabilidade de longo prazo de nosso sistema de pensão, mas ainda há mais a ser feito."
  ITA_unsustainable_pension_system_2_desc: "Nosso sistema de pensão está entre os mais insustentáveis do mundo devido a décadas de pensões muito generosas concedidas a pessoas com tempo de trabalho muito limitado e uma população em declínio."
@@ -2527,4 +2527,4 @@
  ITA_tech_deal: "Acordo técnico"
  ITA_restart_otomatic_development: "Reiniciar o Desenvolvimento do Otomatic"
  ITA_restart_otomatic_development_desc: "Reiniciar o Desenvolvimento do Otomatic"
- ITA_treaty_of_benghazi_TT: "The §YTreaty of Benghazi§! has been signed with [LBA.GetNameWithFlag]"
+ ITA_treaty_of_benghazi_TT: "O §YTratado de Benghazi§! foi assinado com [LBA.GetNameWithFlag]"
