--- a/localisation/braz_por/MD_focus_NKO_l_braz_por.yml
+++ b/localisation/braz_por/MD_focus_NKO_l_braz_por.yml
@@ -1,5 +1,5 @@
 ﻿l_braz_por:
- north_korea_focus: "North Korea Focus Tree"
+ north_korea_focus: "Árvore de foco na Coreia do Norte"
  NKO_prioritize_to_solve_famine: "Priorizar Resolver a Fome"
  NKO_prioritize_to_solve_famine_desc: "Garantir que nosso povo esteja bem alimentado e vestido deve ser nossa primeira prioridade."
  NKO_prioritize_songun: "Priorizar o Songun"
@@ -76,7 +76,7 @@
  NKO_Rocket_Artillery_desc: "Focar em Artilharia de Foguete: Este foco concentra-se no desenvolvimento e aprimoramento da artilharia de foguete na Coreia do Norte. Isso envolve o investimento em tecnologia e produção de sistemas de foguetes para fins militares. O objetivo é fortalecer a capacidade de artilharia de foguete do país."
  NKO_Improve_Command_Control: "Melhorar o Comando e Controle"
  NKO_Improve_Command_Control_desc: "Focar em Melhorar o Comando e Controle: Este foco concentra-se na aprimoração do sistema de comando e controle da Coreia do Norte. Isso envolve o desenvolvimento de sistemas e tecnologias que permitem uma gestão mais eficaz das operações militares e estratégicas. O objetivo é fortalecer a capacidade de coordenação e tomada de decisões nas forças armadas."
- NKO_People_Cyber_Army: "Bureau 121"
+ NKO_People_Cyber_Army: "Gabinete 121"
  NKO_People_Cyber_Army_desc: "O campo de batalha moderno não se trata apenas de equipamentos avançados, mas também da superioridade da informação. O Bureau 121, uma agência especializada de nossa inteligência militar, nos ajudará a melhorar nesse aspecto."
  NKO_Industrial_Espionage: "Espionagem Industrial"
  NKO_Industrial_Espionage_desc: "A propriedade intelectual é o que as nações ocidentais usam para defender sua atual vantagem econômica. Não precisamos negociar com esses imperialistas sem vergonha. Vamos usar o Bureau 121 para fechar a lacuna tecnológica entre nós e nossos inimigos odiosos."
@@ -426,8 +426,8 @@
  NKO_Arduous_March_desc: "A §Rfome na Coreia do Norte§! foi um período de fome em massa, juntamente com uma crise econômica geral a partir de 1994 na Coreia do Norte, também conhecida como a \"Marcha Árdua\"."
  NKO_send_citizens: "Enviar Cidadãos para o Interior"
  NKO_send_KPA: "Enviar KPA para o Interior"
- NKO_international_assistance: "Accept International Humanitarian Aid"
- NKO_international_assistance_desc: "\"North Koreans welcome humanitarian aid from foreigners\"."
+ NKO_international_assistance: "Aceite a Ajuda Humanitária Internacional"
+ NKO_international_assistance_desc: "“Os norte-coreanos acolhem bem a ajuda humanitária de estrangeiros” ."
  NKO_end_of_arduous_march: "O Fim da Marcha Árdua"
  NKO_end_of_arduous_march_desc: "Sob a liderança do Grande Líder [NKO.GetLeader], finalmente alcançamos uma grande vitória contra \"A Marcha Árdua\"!"
  Kim_Jong_un_support: "Kim Jong-un: Fazendo Lobby no Topo"
