--- a/localisation/braz_por/MD_focus_PER_l_braz_por.yml
+++ b/localisation/braz_por/MD_focus_PER_l_braz_por.yml
@@ -1,6 +1,6 @@
 ﻿l_braz_por:
  iran_focus: "Árvore de Focos Iraniana"
- PER_NEW_LINE_TOOLTIP: " \n"
+ PER_NEW_LINE_TOOLTIP: "\n"
  PER_the_third_development_plan: "O Terceiro Plano de Desenvolvimento"
  PER_the_third_development_plan_desc: "O Terceiro Plano de Desenvolvimento (pós-Revolução) incluiu medidas e ações para reestruturar a economia estatal do Irã em direção a um sistema de mercado globalmente orientado, bem como medidas relacionadas a políticas internas e externas, segurança nacional e esforços culturais. No entanto, é muito para ser realisticamente concluído em 5 anos, então devemos focar em qual parte do plano realizar."
  PER_IMIDRO: "IMIDRO"
@@ -52,7 +52,7 @@
  PER_central_dev_name_desc: "As regiões centrais do Irã são muito críticas para o desenvolvimento da nação como um todo, considerando que abrigam grandes áreas urbanas com muitas pessoas vivendo lá. Desenvolver as regiões centrais pode ser útil para impulsionar o Irã para a próxima fase de desenvolvimento."
  PER_two_shrines_name: "Conectar As Duas Santuários"
  PER_two_shrines_name_desc: "O Santuário de Fatima Masumeh em Qom e o Santuário do Imam Reza em Mashhad são alguns dos locais mais sagrados do Islã Xiita e alguns dos mais visitados por peregrinos e turistas. Facilitar o transporte entre os dois santuários ajudaria os peregrinos, geraria receita muito necessária e permitiria uma maior viagem interurbana por meio de estradas e trilhos avançados."
- PER_iran_transfo_siemens: "Iran Transfo Siemens"
+ PER_iran_transfo_siemens: "Irã Transfo Siemens"
  PER_iran_transfo_siemens_desc: "Sob a licença da Siemens Energy, a Corporação Iraniana Transfo foi fundada em 1966 como fabricante de transformadores de potência média e grande com o objetivo principal de projetar, calcular e fabricar todos os tipos de transformadores de acordo com os padrões internacionais. Para isso, é necessário construir fábricas dedicadas à fabricação de peças de transformadores."
  PER_expand_industrial_towns_in_qazvin: "Expandir Cidades Industriais em Qazvin"
  PER_expand_industrial_towns_in_qazvin_desc: "A cidade de Qazvin tornou-se um polo em desenvolvimento do país, principalmente devido à sua localização favorável. Qazvin hoje é um centro de comércio têxtil, incluindo algodão, seda e veludo, além de couro. A assistência financeira do governo na construção de nova infraestrutura para permitir a expansão na região circundante é teorizada pelos ministros para trazer novas indústrias."
@@ -92,7 +92,7 @@
  PER_french_total_desc: "A TotalEnergies, uma empresa de petróleo francesa, tem sido um investidor significativo no setor de energia iraniano desde 1990. Eles têm direitos extensos de desenvolvimento para o campo de petróleo South Pars desde que começaram a trabalhar no Irã, e poderíamos estender esses direitos e desenvolver ainda mais o campo, embora a França tenha uma influência maior em nossos assuntos internos devido a isso."
  PER_royal_dutch_shell: "Royal Dutch Shell"
  PER_royal_dutch_shell_desc: "A Royal Dutch Shell é uma empresa de petróleo holandesa-britânica que atua em todas as áreas da indústria de petróleo e gás, incluindo exploração, produção, refino e petroquímica. Para reduzir a dependência apenas das exportações de petróleo, poderíamos permitir que a Royal Dutch Shell construísse instalações petroquímicas, embora o Reino Unido tenha uma influência maior em nossos assuntos internos devido a isso."
- PER_malaysian_petronas: "Malaysian Petronas"
+ PER_malaysian_petronas: "Petronas da Malásia"
  PER_malaysian_petronas_desc: "A Petronas é uma empresa malaia sediada em Kuala Lumpur que está ativa no campo de petróleo Sirri no Golfo Pérsico desde o final dos anos 1990. Poderíamos renovar seu contrato e expandir seus direitos atuais no setor de petróleo em nosso país, embora a Malásia tenha uma influência maior em nossos assuntos internos devido a isso."
  PER_chinese_CNPC: "Chinesa CNPC"
  PER_chinese_CNPC_desc: "A China National Petroleum Corporation (CNPC) é uma grande corporação de petróleo e gás nacional da China e um dos maiores grupos de energia integrados do mundo. A CNPC tornou-se cada vez mais envolvida no desenvolvimento do Campo de Petróleo Masjed Soleyman, e poderíamos permitir mais projetos de desenvolvimento deles, embora a China tenha uma influência maior em nossos assuntos internos devido a isso."
@@ -2495,7 +2495,7 @@
  PER_will_piss_off_MEK_TT: "Essa opção pode causar a §HRevolta§! do §HMEK§!"
  MEK_unbanned_TT: "Irá §Hrevogar§! a §Hproibição§! do §HMEK§!"
  PER_idea_increased_immigration: "Afghan Migrant Influx"
- PER_anti_immigration_policies_idea: "Restricting Afghan Migrations"
+ PER_anti_immigration_policies_idea: "Restringindo as Migrações Afegãs"
  PER_migrant_workers: "Vistos de Trabalho"
  PER_migrant_workers_desc: "Começamos a emitir vistos de trabalho para aqueles que estão dispostos a ajudar a melhorar nossa nação por meio do trabalho árduo."
  full_control_of_hormuz: "Autoridade do Estreito de Hormuz"
@@ -3913,7 +3913,7 @@
  PER_political.302.a: "Bem..."
  PER_political.490.t: "Estado Iraniano Hostil"
  PER_political.490.d: "O governo iraniano será mais hostil em relação à nossa nação para seguir sua própria agenda. Precisamos ficar de olho na influência iraniana, porque se ela ficar muito alta, nossa nação estará em risco!"
- PER_political.490.a: "Uh oh"
+ PER_political.490.a: "Ui..."
  PER_political.99.t: "Irã nos pede para revogar bases dos EUA!"
  PER_political.99.d: "O Irã está solicitando que removamos as bases americanas de nosso solo. Fazê-lo nos dará uma província extra, mas também um embargo dos EUA..."
  PER_political.99.a: "Não, estamos bem"
@@ -4226,7 +4226,7 @@
  iran_md.241.d: "Um grupo de nossos pescadores estava se aproximando demais de um navio russo hoje cedo, então os russos, em toda sua grande decisão, decidiram capturá-los e apreender todos os seus bens."
  iran_md.241.a: "Diga a eles para libertarem os pescadores, agora!"
  iran_md.241.b: "Diga a eles para libertarem os pescadores e lançarem um protesto diplomático"
- iran_md.241.c: "I really don't care"
+ iran_md.241.c: "Eu realmente não me importo"
  iran_md.242.t: "Rússia liberta pescadores"
  iran_md.242.d: "Após alguma pressão do nosso governo, os russos libertaram os pescadores e pediram desculpas."
  iran_md.242.a: "Bom"
@@ -4238,10 +4238,10 @@
  iran_md.244.d: "Delegados do governo iraniano nos enviaram uma carta com palavras bastante fortes sobre a captura de seus pescadores no início desta semana. Apreendemos alguns bens realmente bons daqueles navios, e algumas pessoas em nosso governo sugerem que os mantenhamos.."
  iran_md.244.a: "Podemos simplesmente ignorá-los"
  iran_md.244.b: "Está bem, liberem os pescadores e seus bens"
- iran_md.245.t: "Influx of Afghan Migrants"
- iran_md.245.d: "As a result of the devestating conflict currently raging in Afghanistan, many people have decided to flee their homes and make a daring attempt to flee into Iran. As a result, our infrastructure in the Eastern regions have come under stress, and some people within our nation are less accepting of foreigners entering Iran, even if its for refuge."
- iran_md.245.a: "They are welcome here"
- iran_md.245.b: "Iran is full, sorry"
+ iran_md.245.t: "Afluxo de migrantes afegãos"
+ iran_md.245.d: "Como resultado do conflito devastador que actualmente assola o Afeganistão, muitas pessoas decidiram fugir das suas casas e fazer uma tentativa ousada de fugir para o Irão. Como resultado, as nossas infra-estruturas nas regiões orientais estão sob pressão e algumas pessoas no nosso país aceitam menos a entrada de estrangeiros no Irão, mesmo que seja para refúgio."
+ iran_md.245.a: "Eles são bem-vindos aqui"
+ iran_md.245.b: "O Irã está cheio, desculpe"
  iran_md.25.t: "Apoiadores de Pahlavi fazem protestos"
  iran_md.25.d: "Os apoiadores do príncipe herdeiro, Reza Pahlavi, começaram a realizar protestos em todo o país. Eles estão pedindo a restauração de uma monarquia constitucional com algum nível de controle concedido ao Xá. Nosso partido historicamente esteve muito alinhado com a dinastia Pahlavi, mas isso foi apenas antes de termos obtido poder.."
  iran_md.25.a: "Não, isso nos causará mais problemas do que benefícios"
@@ -4420,7 +4420,7 @@
  PER_revolution.15.a: "Outro inimigo derrotado..."
  PER_revolution.16.t: "Centros de conscrição são invadidos por voluntários"
  PER_revolution.16.d: "Após a invasão financiada pelo Iraque do Mojahedin no Irã, muitos cidadãos comuns têm se apresentado em massa nos centros de conscrição para se juntar ao exército de nossa nação e lutar contra o inimigo!"
- PER_revolution.16.a: "Payande Iran!"
+ PER_revolution.16.a: "Payande Irã!"
  PER_majlis.1.t: "Majlis aprova lei de Centralização"
  PER_majlis.1.d: "O Majlis decidiu aprovar um projeto de lei que aumenta nossos gastos com burocracia, seguindo uma proposta que fizemos alguns dias atrás."
  PER_majlis.1.a: "Ótimo"
@@ -4727,7 +4727,7 @@
  PER_civilwar.61.t: "Generais do IRGC Fugiram para o Sul do Líbano"
  PER_civilwar.61.d: "Vários generais do IRGC fugiram para o Sul do Líbano, onde receberam posições em seu exército. Qasem Soleimani, o general mais infame, jurou retomar o Irã e restaurar seu governo 'legítimo'."
  PER_civilwar.61.a: "Merda"
- PER_civilwar.100.t: "Religious Problems"
+ PER_civilwar.100.t: "Problemas religiosos"
  PER_civilwar.100.d: "No conselho revolucionário, muitos têm manifestado preocupação com a reação do clero à derrubada de seu estabelecimento. Muitos estão dizendo que é melhor criarmos uma região autônoma em Qom, onde o clero administra a cidade. No entanto, alguns dizem que essa ideia é mal aconselhada.."
  PER_civilwar.100.a: "Façam planos para a cidade"
  PER_civilwar.100.b: "Nenhuma exceção será feita"
@@ -5247,9 +5247,9 @@
  PER_bazaar_exploitation: "Manipulação do Bazar"
  PER_revolutionary_council_formation: "O Conselho Revolucionário"
  PER_revolutionary_council_formation_desc: "A §HRevolução§! precisa da cooperação de todos os membros da oposição para ter sucesso. Enquanto alguns podem hesitar em ajudar a causa, os três que têm algumas §Hsemelhanças ideológicas§! podem chegar a um §Hcompromisso§!. Dependendo de quem é o §HLíder§! da §HRevolução§!, eles têm que fazer certas concessões e compromissos com os outros membros da oposição para conquistar seu apoio para o §HConselho Revolucionário§!.\n\nSe algum líder da oposição se recusar a participar do conselho, estará lutando contra o §HConselho Revolucionário§!."
- PER_pendar_pezeshkpour: "£PER_Nat_Populism_small  Pendar Pezeshkpour"
- PER_reza_shah_pahlavi: "£PER_monarchism  Reza Shah Pahlavi II"
- PER_boroumand: "£PER_Neutral_conservatism  Adib Boroumand"
+ PER_pendar_pezeshkpour: "£PER_Nat_Populism_small Pendar Pezeshkpour"
+ PER_reza_shah_pahlavi: "£PER_monarchism Reza Shah Pahlavi II"
+ PER_boroumand: "£PER_Neutral_conservatism Adib Boroumand"
  PER_CONCEDE_MAJLIS: "Vamos §Rceder§! o §HMajlis§! em troca de sua §Hajuda§!"
  PER_CONCEDE_MINISTER: "Vamos §Rceder§! a §HPosição de Primeiro Ministro§! em troca de sua §Hajuda§!"
  PER_increase_council_strength_5: "Aumentará a §HForça do Conselho§! em §H5%§!"
@@ -5328,7 +5328,7 @@
  PER_esmail_nooriala_minister_name: "Esmail Nooriala"
  PER_hassan_shariatmadari_minister_name: "Hassan Shariatmadari"
  PER_kazem_mousavi_minister_name: "Kazem Mousavi"
- PER_roozbeh_farahinpour_minister_name: "Roozbeh Farahanipour"
+ PER_roozbeh_farahinpour_minister_name: "Roozbeh Farahanipur"
  PER_abulqasem_porhashmi_minister_name: "Abolqasem Porhashmi"
  PER_alireza_kiani_minister_name: "Alireza Kiani"
  PER_farhad_baghnani_minister_name: "Farhad Baghbani"
@@ -5390,7 +5390,7 @@
  PER_bazargan_idea: "Abdolali Bazargan"
  PER_etemadi_idea: "Amir Etemadi"
  PER_shariatmadari_idea: "Hassan Shariatmadari"
- PER_farahanipour_idea: "Roozbeh Farahanipour"
+ PER_farahanipour_idea: "Roozbeh Farahanipur"
  PER_porhashmi_idea: "Abolqasem Porhashmi"
  PER_kiani_idea: "Alireza Kiani"
  PER_baghbani_idea: "Farhad Baghbani"
@@ -5511,5 +5511,5 @@
  PER_appoint_jamshid_amouzegar: "Nomear Jamshid Amouzegar"
  PER_high_inbreeding: "Pele Grossa, e Sangue Mais Espesso"
  PER_high_inbreeding_desc: "'§HMantenha-o na família§!!'\nPor que procurar lá fora quando se pode procurar dentro de casa? Em Rasht, o drama familiar é mais complicado do que a árvore russa em MD! Meu tio costumava dizer que as mulheres são como café, quentes, molhadas e assim como minha avó."
- PER_ban_gas_sales_to_turkey: "Ban on Gas sales to Turkey"
- PER_ban_gas_sales_to_turkey_desc: "Turkey does not deserve the gas we produce! We should ban them from purchasing it from our markets and pipelines!"
+ PER_ban_gas_sales_to_turkey: "Proibição de vendas de gás para a Turquia"
+ PER_ban_gas_sales_to_turkey_desc: "A Turquia não merece o gás que produzimos! Deveríamos proibi-los de comprá-lo em nossos mercados e oleodutos!"
