--- a/localisation/braz_por/MD_focus_PMR_l_braz_por.yml
+++ b/localisation/braz_por/MD_focus_PMR_l_braz_por.yml
@@ -611,4 +611,4 @@
  transnistria.28.a: "Legal"
  PMR_general_monarchist_christian: "General Monarquista Cristão"
  PMR_it_giant: "Investimentos em TI"
- PMR_use_kobasna: "Empty the §Y[PMR.GetFlag]Transnistrian§! arms depots"
+ PMR_use_kobasna: "Esvazie a §Y[PMR.GetFlag]Transnístria§! depósitos de armas"
