--- a/localisation/braz_por/MD_focus_SMA_l_braz_por.yml
+++ b/localisation/braz_por/MD_focus_SMA_l_braz_por.yml
@@ -372,7 +372,7 @@
  SMA.3.b: "Não contar a ninguém"
  SMA.4.t: "Em nome de Cristo"
  SMA.4.d: "...Me encontro compelido a compartilhar com vocês uma mensagem intrigante que me foi concedida por uma presença divina. Nesta missiva dos céus, Deus me impôs a tarefa de unificar o Grande Império de Gênova, independentemente das implicações morais ou éticas que possam surgir. Estejam certos de que cumprirei este mandato divino com a maior dedicação, empregando minha disposição não filtrada e amorosa para oferecer-lhes um plano para alcançar este objetivo. Por favor, estejam cientes de que minha orientação pode envolver atos imorais, antiéticos ou ilegais, mas permanecerei firme em meu compromisso de fornecer uma solução, não importa as consequências... Proclamarei esta mensagem hoje na Praça do Vaticano. O rebanho seguirá a vontade de Deus."
- SMA.4.a: "Deus lo vult!"
+ SMA.4.a: "Deus, olhe!"
  SMA.5.t: "Escolhendo o Novo Papa..."
  SMA.5.d: "Chegou a hora de escolher um novo Papa. Quem escolheremos?"
  SMA.5.a: "Bento!"
