--- a/localisation/braz_por/MD_focus_SOO_l_braz_por.yml
+++ b/localisation/braz_por/MD_focus_SOO_l_braz_por.yml
@@ -1,5 +1,5 @@
 ﻿l_braz_por:
- South_Ossetia_focus: "South Ossetia Focus Tree"
+ South_Ossetia_focus: "Árvore de Foco da Ossétia do Sul"
  SOO_Lumber_tt_focus: "§YCorte de Madeira§! impacto na §YRenda Adicional§! $§G0.012§! Bilhão"
  SOO_Famers_ddynamic_modifers: "Agricultura Rural"
  Soviet_era_work_decisionstt: "£ícone_decisão_pequeno §YDesbloqueia§! Reparos de Manufatura §Ydecisões§! "
