--- a/localisation/braz_por/MD_focus_SUB_l_braz_por.yml
+++ b/localisation/braz_por/MD_focus_SUB_l_braz_por.yml
@@ -1016,7 +1016,7 @@
  CRM_Tavria: "Tavria"
  CRM_tatars: "República Democrática da Crimeia"
  CRM_tourism_TT: "Recebemos renda do turismo: $$§G0.100§!\n"
- SUB_tatarstan_gui_TT: "§HTatarstan§!"
+ SUB_tatarstan_gui_TT: "§HTatarstão§!"
  CRM_tatars_bunt_tt: "Os tártaros da Crimeia iniciarão uma revolução"
  CHE_radicalche_finish_tt: "A maioria dos terroristas foi destruída"
  CRM_royal_leib_guard: "Guarda Leib Renascida"
@@ -1379,7 +1379,7 @@
  BSH_gazafication_desc: "Estamos gaseificando toda a república"
  BSH_gosoboronzakaz: "GosOboronZakaz"
  BSH_gosoboronzakaz_desc: "É hora de reconstruirmos a economia para cumprir os pedidos militares da Rússia"
- BSH_military_KumAPP: "Kumertau Aviation Production Enterprise"
+ BSH_military_KumAPP: "Empresa de produção de aviação Kumertau"
  BSH_military_KumAPP_desc: "A empresa de fabricação de aeronaves soviética e russa, localizada na cidade de Kumertau. A planta fabrica e repara helicópteros Ka-226, assim como Ka-27, Ka-31 e Ka-32A11BC"
  BSH_military_ATV: "Molniya(UNPP)"
  BSH_military_ATV_desc: "o escritório de design soviético e a empresa russa para o desenvolvimento, produção e modernização de sistemas de controle automático eletrônico e sistemas de ignição elétrica para motores de aeronaves"
@@ -2000,10 +2000,10 @@
  chechnya.11.t: "Chechenos Realizam Um Atentado Bem-Sucedido Contra o Presidente da Rússia"
  chechnya.11.d: "A insatisfação da diáspora chechena resultou no incidente mais terrível e inesperado. Agentes chechenos organizaram um ataque e assassinato bem-sucedidos do nosso presidente. Não temos escolha senão anunciar o início de uma operação especial"
  chechnya.11.a: "Meu Deus, ajude-nos"
- chechnya.12.t: "Ramzan Kadyrov Offers To Attack Ukraine"
- chechnya.12.d: "Ramzan Kadyrov proposes to conduct a special operation on the territory of Ukraine.  This country, in his opinion, harms Russia too much, it's time to deal with it"
- chechnya.12.a: "Let's Listen To His Advice"
- chechnya.12.b: "No"
+ chechnya.12.t: "Ramzan Kadyrov se oferece para atacar a Ucrânia"
+ chechnya.12.d: "Ramzan Kadyrov propõe realizar uma operação especial no território da Ucrânia. Este país, na sua opinião, prejudica muito a Rússia, é hora de lidar com isso"
+ chechnya.12.a: "Vamos ouvir seu conselho"
+ chechnya.12.b: "Não"
  chechnya.13.t: ""
  chechnya.13.d: ""
  chechnya.13.a: ""
@@ -2198,5 +2198,5 @@
  CHE_chechen_battalion_TT: "Batalhões chechenos estacionados no exterior retornarão à Ichkeria"
  CHE_defence_nation: "A Última Batalha"
  CHE_defence_nation_desc: "Nosso povo está pronto para sua última batalha pela independência"
- CRM_ruble: "Switch to the Ruble"
+ CRM_ruble: "Mude para o rublo"
  CRM_ruble_desc: ""
