--- a/localisation/braz_por/MD_focus_SWE_l_braz_por.yml
+++ b/localisation/braz_por/MD_focus_SWE_l_braz_por.yml
@@ -1,5 +1,5 @@
 ﻿l_braz_por:
- sweden_focus: "Swedish Focus Tree"
+ sweden_focus: "Árvore de Foco Sueca"
  SWE_post_crisis_fiscal_decisions: "Decisões fiscais pós-crise"
  SWE_post_crisis_fiscal_decisions_desc: "A economia sueca, outrora equipada com os maiores rendimentos da Europa durante os anos 70, não conseguiu ficar à frente das demais. Especialmente a crise dos anos 90, quando o PIB caiu 5% no início da década, marcou a outrora intocável máquina de dinheiro sueca. O orçamento de 1994 teve um déficit de 15% do PIB. Agora, o governo precisa definir uma política convincente para o novo milênio."
  SWE_riksbank_policy: "Política do Riksbank"
@@ -9,7 +9,7 @@
  SWE_improve_the_stridsvagn_122: "Melhorar o Tanque 122"
  SWE_improve_the_stridsvagn_122_desc: "O Stridsvagn 122 é uma versão licenciada do tanque de batalha principal alemão Leopard 2A5. Especializado para combate na floresta, o Stridsvagn ainda pode ser objeto de experimentos militares para talvez tornar a próxima geração de tanques suecos ainda mais eficaz - e talvez desta vez menos alemã - família de máquinas de guerra."
  SWE_contracts_for_german_armament_companies: "Contratos para empresas de armamento alemãs"
- SWE_contracts_for_german_armament_companies_desc: "The Swedish military sector has never been massive to begin with and its size has also drained over the decades, especially since the end of the Cold War has put 'armed neutrality' a bit further down on government priorities. While we cannot make sure that our weaponry will be perfect ourselves, the Germans certainly would be happy to. Maybe we should consider hiring them."
+ SWE_contracts_for_german_armament_companies_desc: "Para começar, o sector militar sueco nunca foi enorme e a sua dimensão também diminuiu ao longo das décadas, especialmente desde que o fim da Guerra Fria colocou a “neutralidade armada” um pouco mais abaixo nas prioridades do governo. Embora não possamos garantir que o nosso armamento será perfeito, os alemães certamente ficariam felizes em fazê-lo. Talvez devêssemos considerar contratá-los."
  SWE_oresund_bridge: "Ponte de Oresund"
  SWE_oresund_bridge_desc: "Em construção desde o final dos anos 1990, o Öresundsbron (dinamarquês Øresundsbroen) é um enorme projeto de ponte e túnel para conectar Malmö, no sul da Suécia, a Copenhague, capital da Dinamarca. Isso marcaria uma nova conexão entre o sul da Fennoscandia e a continente europeu e facilitar o comércio com os dinamarqueses, bem como com os alemães e outros países europeus."
  SWE_expand_e20: "Expandir E20"
@@ -25,7 +25,7 @@
  SWE_friendship_with_denmark: "Amizade com a Dinamarca"
  SWE_friendship_with_denmark_desc: "Suécia e Dinamarca levaram um bom tempo para descobrir seu amor um pelo outro, indo à guerra mais de vinte vezes ao longo dos últimos dez séculos. Mas Dinamarca e Suécia, a primeira a inspiração da bandeira do último, o último claramente superiores aos primeiros em todos os outros aspectos, encontraram-se como amigos e parceiros. E às vezes rivais. Droga danskjävlar."
  SWE_friendship_with_norway: "Amizade com a Noruega"
- SWE_friendship_with_norway_desc: "Norway was by Sweden's side for a long time - both figuratively and geographically. But while the weird shape of their country is a tale of it's own, it is undeniable that the friendship of our two nations has been of mutual benefit. Even though they chose divorce in 1905. That was rude."
+ SWE_friendship_with_norway_desc: "A Noruega esteve ao lado da Suécia durante muito tempo - tanto figurativa como geograficamente. Mas embora a forma estranha do seu país seja uma história por si só, é inegável que a amizade das nossas duas nações tem sido de benefício mútuo. Mesmo que tenham escolhido o divórcio em 1905. Isso foi rude."
  SWE_friendship_with_the_baltic_states: "Amizade com os Estados Bálticos"
  SWE_friendship_with_the_baltic_states_desc: "Estônia, Letônia e Lituânia compartilham muito com os países nórdicos - ou assim eles dizem. Enquanto ainda tentamos descobrir quais semelhanças culturais, além de uma vaga relação linguística entre as línguas estoniana e finlandesa, supostamente ligam o norte da Europa a naquela parte da Europa Oriental, podemos muito bem torná-los nossos amigos já. Por que não?"
  SWE_swedish_norwegian_steel_production: "Produção de aço sueco-norueguesa"
@@ -89,7 +89,7 @@
  SWE_demand_equality_for_finland_swedes: "Exija igualdade para os suecos-finlandeses"
  SWE_demand_equality_for_finland_swedes_desc: "Os suecos na Finlândia já sofreram o suficiente por estarem lá! Exija mudanças sociais do governo finlandês."
  SWE_glorify_the_viking_heritage: "Glorifique a herança viking"
- SWE_glorify_the_viking_heritage_desc: "Praise Thor! Praise Odin! Praise Freya! The old gods love the new government and so do we about our great times of raiding, when going with our empty pockets and come with them full of gold!"
+ SWE_glorify_the_viking_heritage_desc: "Louvado seja Thor! Louvado seja Odin! Louvado seja Freya! Os deuses antigos amam o novo governo e nós também amamos nossos grandes momentos de invasão, quando vamos com os bolsos vazios e voltamos cheios de ouro!"
  SWE_declare_the_finns_honorary_northeners: "Declare os finlandeses nortistas honorários"
  SWE_declare_the_finns_honorary_northeners_desc: "Assim como um dos grandes homens da história que admiramos fez em novembro de 1942, devemos reconhecer que o povo finlandês é realmente parte da raça superior. Esses mongolóides podem ser úteis para alguma coisa, afinal."
  SWE_the_king_of_sweden: "O Rei da Suécia"
@@ -157,7 +157,7 @@
  Sweden.7.o2: "'Europa Supremalis', um jogo sobre a escravização de africanos."
  Sweden.7.o3: "'Deus Vult', um jogo sobre incesto."
  Sweden.8.t: "Suécia exige igualdade para Finlândia-Suecos"
- Sweden.8.d: "Sweden's recent neo-imperialistic aggression against Finland has peaked in demands for equality for the Swedish-speaking minority in Finland.\n\nHere is the thing: They are already equal. The biggest movement within the group claiming otherwise has gathered 50 members so far. There is nothing the Swedes could possibly be offended about - and nothing we can change."
+ Sweden.8.d: "A recente agressão neo-imperialista da Suécia contra a Finlândia atingiu o auge nas exigências de igualdade para a minoria de língua sueca na Finlândia.\n\nO problema é o seguinte: eles já são iguais. O maior movimento dentro do grupo que afirma o contrário reuniu 50 membros até agora. Não há nada que possa ofender os suecos - e nada que possamos mudar."
  Sweden.8.o1: "Os suecos são loucos."
  Sweden.9.t: "Plano de colonização do Báltico"
  Sweden.9.d: "Os Estados bálticos precisam retornar ao status de dependência sueca. Estônia, Letônia e Lituânia foram soluções temporárias aceitáveis - mas seu tempo acabou."
