--- a/localisation/braz_por/MD_ideas_l_braz_por.yml
+++ b/localisation/braz_por/MD_ideas_l_braz_por.yml
@@ -4,7 +4,7 @@
  minority_government: "Governo Minoritário"
  minority_government_desc: "Nosso governo atualmente opera como um governo minoritário, tornando todas as ações políticas muito difíceis."
  international_sanctions: "Sanções Internacionais"
- international_sanctions_desc: "We are subject to economic sanctions by the international community."
+ international_sanctions_desc: "Estamos sujeitos a sanções económicas por parte da comunidade internacional."
  p5_member: "Membro Permanente do CSNU"
  p5_member_desc: "Os membros permanentes do Conselho de Segurança das Nações Unidas, também conhecidos como os Cinco Permanentes, Grandes Cinco ou P5, incluem os seguintes cinco governos: China, França, Rússia, Reino Unido e Estados Unidos. Os membros representam as cinco grandes potências consideradas vencedoras da Segunda Guerra Mundial. Cada um dos membros permanentes tem o poder de veto, o que lhes permite impedir a adoção de qualquer resolução substantiva do Conselho, independentemente do nível de apoio internacional ao projeto."
  g7_member: "Membro do Grupo dos Sete"
@@ -558,7 +558,7 @@
  commonwealth_of_nations_member: "Membro da Commonwealth das Nações"
  commonwealth_of_nations_member_desc: "Este país é membro da Commonwealth das Nações, antiga Commonwealth Britânica."
  AU_member: "Membro da União Africana"
- AU_member_desc: "The African Union has been formed from the members of the Organization of African Unity. Unlike the previous organization, the African Union has established political institutions and a roadmap for the military, economic, judicial and financial integration of the continent."
+ AU_member_desc: "A União Africana foi formada pelos membros da Organização da Unidade Africana. Ao contrário da organização anterior, a União Africana estabeleceu instituições políticas e um roteiro para a integração militar, económica, judicial e financeira do continente."
  communist_militias: "Milícias Comunistas"
  consumer_goods_bonus: "Bônus de Bens de Consumo"
  convoy_focus: "Foco em Comboio"
@@ -912,7 +912,7 @@
  civil_war_disorganised_military_4_desc: "O pior da confusão inicial já passou e nosso militar está agindo principalmente como um exército real agora.\n\n§RQuando esta ideia expirar, a situação melhorará ligeiramente.§!\n\nStatus militar atual:\nNão Controlado\nCaótico\nConfuso\n§YDesorganizado§!\nDesordenado"
  civil_war_disorganised_military_5: "Militar Desordenado"
  civil_war_disorganised_military_5_desc: "Nosso militar está quase de volta ao seu status profissional pré-guerra civil. O maior desafio agora é combinar e integrar todas as várias milícias que reunimos ao longo do caminho.\n\n§RQuando esta ideia expirar, a situação melhorará ligeiramente.§!\n\nStatus militar atual:\nNão Controlado\nCaótico\nConfuso\nDesorganizado\n§YDesordenado§!"
- generic_increased_military_support: "Increased Military Support"
+ generic_increased_military_support: "Maior apoio militar"
  protest_construction_easy: "Esforços de Construção Interrompidos"
  protest_construction_easy_desc: "Protestos generalizados levaram a taxas de construção mais lentas, pois interferem no cronograma dos locais de construção."
  protest_production_easy: "Greves de Protesto"
@@ -921,8 +921,8 @@
  protest_construction_hard_desc: "Protestos generalizados levaram a uma quase paralisação na construção em todo o país."
  protest_production_hard: "Principais Greves de Protesto"
  protest_production_hard_desc: "A maioria das plantas industriais convocadas para greve como parte da atividade recente de protestos."
- international_sanctions_tt: "§RCan't access §YWeapon Market§!§!"
- OAU_member: "Organization of African Unity Member"
- OAU_member_desc: "The Organization of African Unity (OAU) was founded in 1963 by then independent African nations. The goal of the organization was to encourage political and economic integration of Africa, and to fight against colonialism and neo-colonialism. However, the organization has mainly stayed as a 'talking shop' as no common military, judicial or political departments have been established between the states. In 1999, under the lead of Libyan leader Muammar Gaddafi, the OAU members signed the Sirte declaration, with the intention of replacing the OAU with the African Union latest by 2002 to finally create an organization that is capable of uniting the African continet."
- SHA_libyan_education: "Libyan Education"
- SHA_libyan_education_desc: "Libya has been an ardent supporter of Sahrawi independence since the 1980s. One of the key ways Libya supports the POLISARIO Front is by providing education to many young Sahrawis. This allows our people access to education the Moroccans deny of us."
+ international_sanctions_tt: "§RNão consigo acessar o §YMercado de Armas§!§!"
+ OAU_member: "Membro da Organização da Unidade Africana"
+ OAU_member_desc: "A Organização da Unidade Africana (OUA) foi fundada em 1963 pelas nações africanas então independentes. O objectivo da organização era encorajar a integração política e económica de África e lutar contra o colonialismo e o neocolonialismo. No entanto, a organização manteve-se principalmente como um “centro de discussão”, uma vez que não foram estabelecidos departamentos militares, judiciais ou políticos comuns entre os estados. Em 1999, sob a liderança do líder líbio Muammar Gaddafi, os membros da OUA assinaram a declaração de Sirte, com a intenção de substituir a OUA pela União Africana, o mais tardar até 2002, para finalmente criar uma organização que seja capaz de unir o continente africano."
+ SHA_libyan_education: "Educação Líbia"
+ SHA_libyan_education_desc: "A Líbia tem sido um fervoroso defensor da independência saharaui desde a década de 1980. Uma das principais formas pelas quais a Líbia apoia a Frente POLISARIO é proporcionando educação a muitos jovens saharauis. Isto permite ao nosso povo o acesso à educação que os marroquinos nos negam."
