--- a/localisation/braz_por/MD_internal_factions_l_braz_por.yml
+++ b/localisation/braz_por/MD_internal_factions_l_braz_por.yml
@@ -30,11 +30,11 @@
  NIG_fossil_fuel_industry: "Empresas de Petróleo [NIG.GetAdjective]"
  SOV_fossil_fuel_industry: "Empresas de Energia [SOV.GetAdjective]"
  SAU_fossil_fuel_industry: "Saudi Aramco"
- UAE_fossil_fuel_industry: "Abu Dhabi National Oil Company"
- BHR_fossil_fuel_industry: "Bahrain Petroleum Company"
- KUW_fossil_fuel_industry: "Kuwait Oil Company"
- QAT_fossil_fuel_industry: "Qatar Petroleum"
- OMA_fossil_fuel_industry: "Oman Oil Company"
+ UAE_fossil_fuel_industry: "Companhia Nacional de Petróleo de Abu Dhabi"
+ BHR_fossil_fuel_industry: "Companhia Petrolífera do Bahrein"
+ KUW_fossil_fuel_industry: "Companhia Petrolífera do Kuwait"
+ QAT_fossil_fuel_industry: "Petróleo do Catar"
+ OMA_fossil_fuel_industry: "Companhia Petrolífera de Omã"
  fossil_fuel_industry: "Indústria de Combustíveis Fósseis"
  fossil_fuel_industry_desc: "Quando as indústrias de extração de recursos de uma nação são muito grandes, seu tamanho e lucratividade podem exercer uma enorme influência tanto na política doméstica quanto na estrangeira."
  fossil_fuel_industry_dynamic_modifier: "£pol_idea $fossil_fuel_industry$"
@@ -75,7 +75,7 @@
  negative_def_tt: "§R[?THIS.defense_industry_opinion|0]§!"
  neutral_def_tt: "§Y[?THIS.defense_industry_opinion|0]§!"
  display_defense_industry_opinion: "A opinião do §Y$defense_industry$§! muda em [?temp_opinion|+0] (Atual: [DEF_opinion_display])\n"
- GER_maritime_industry: "Deutsche Marine"
+ GER_maritime_industry: "Marinha Alemã"
  maritime_industry: "A Indústria Marítima"
  maritime_industry_desc: "Em nações tradicionalmente dependentes do mar para sustento, as indústrias de construção naval, pesca, aquicultura e perfuração offshore frequentemente representam os pilares da economia nacional e influenciam a política doméstica."
  maritime_industry_dynamic_modifier: "£pol_idea Indústria Marítima"
@@ -114,7 +114,7 @@
  display_the_military_opinion: "A opinião das §Y$the_military$§! muda em [?temp_opinion|+0] (Atual: [MILI_opinion_display])\n"
  military_at_least_enthusiastic_tt: "A opinião das §Y$the_military$§! é pelo menos 80 (Atual: [MILI_opinion_display])"
  military_at_least_positive_tt: "A opinião das §Y$the_military$§! é pelo menos 60 (Atual: [MILI_opinion_display])"
- GER_intelligence_community: "Bundesnachrichtendienst"
+ GER_intelligence_community: "Serviço Federal de Inteligência"
  IRQ_intelligence_community: "Mukhabarat"
  CHI_intelligence_community: "Ministério da Segurança do Estado"
  SOV_intelligence_community: "Serviço Federal de Segurança da Federação Russa"
@@ -200,7 +200,7 @@
  KEN_labour_unions: "Organização Central dos Sindicatos do Quênia"
  KYR_labour_unions: "Federação de Sindicatos do Quirguistão"
  LAO_labour_unions: "Federação de Sindicatos do Laos"
- LAT_labour_unions: "Free Trade Confederation of Latvia"
+ LAT_labour_unions: "Confederação de Livre Comércio da Letônia"
  LIB_labour_unions: "Federação de Sindicatos Liberianos"
  LEB_labour_unions: "Confederação Geral dos Trabalhadores Libaneses"
  LUX_labour_unions: "Confederação Geral do Trabalho de Luxemburgo"
