--- a/localisation/french/MD_focus_BRA_l_french.yml
+++ b/localisation/french/MD_focus_BRA_l_french.yml
@@ -468,25 +468,25 @@
  BRA_absorb_left_wing: "Absorber les partis de gauche"
  BRA_absorb_left_wing_desc: "Absorber tous les partis de gauche, comme le PSOL et le PCdoB, garantira notre popularité et notre domination sur le Brésil."
  BRA_lulismo: "Lulismo"
- BRA_lulismo_desc: "Lulism is a political ideology describing the 2006 consolidation of segments of Brazilian society previously hostile to social movements and the Workers' Party behind political forces led by President Luiz Inácio Lula da Silva. The controlled reformism and limited structural change focused on the poorest sections of society."
- BRA_the_pheonix_reborn: "The Phoenix Reborn"
- BRA_the_pheonix_reborn_desc: "The Workers Party is reformed, with new interests and goals for the future of Brazil."
- BRA_pro_workers: "Pro-Workers"
- BRA_pro_workers_desc: "The Workers are the main spirit of communism, so we should fulfil their interests."
- BRA_popular_government: "Popular Government"
- BRA_popular_government_desc: "A popular government can do all that it wants to do since the people support all actions and decisions we make."
- BRA_crush_psdb: "Crush PSDB"
- BRA_crush_psdb_desc: "PSDB has been our main rival since the re-democratization. Time to end this rivalry forever!"
- BRA_bring_back_dilma: "Bring Back Dilma"
- BRA_bring_back_dilma_desc: "Dilma Vana Rousseff is a Brazilian economist and politician, affiliated to the Workers' Party and the 36th President of Brazil, having held office from 2011 until her removal for impeachment in 2016."
- BRA_appease_south_american_socialists: "Appease South American Socialists"
- BRA_appease_south_american_socialists_desc: "Venezuela is the main bastion of South American Socialism, we must align ourselves with them to assure our mutual success."
- BRA_industrialization_help_from_china: "Industrialization Help From China"
- BRA_industrialization_help_from_china_desc: "China has a huge industry and economy. If we get some support from them, we might have a better economy."
- BRA_new_communist_goverment: "New Communist Government"
- BRA_new_communist_goverment_desc: "To ensure stability over the nation, the government has to be stable!"
- BRA_five_year_plan: "Five Year Plans"
- BRA_five_year_plan_desc: "The free economic models of the western states is not the future for a socialist state. The return to a planned economy, preferably in the form of classical Soviet-style Five Year Plans, will give the government unchecked influence on the previously unchecked economy."
+ BRA_lulismo_desc: "Le lulisme est une idéologie politique décrivant la consolidation en 2006 de segments de la société brésilienne auparavant hostiles aux mouvements sociaux et au Parti des travailleurs derrière les forces politiques dirigées par le président Luiz Inácio Lula da Silva. Le réformisme contrôlé et les changements structurels limités se sont concentrés sur les couches les plus pauvres de la société."
+ BRA_the_pheonix_reborn: "Le Phénix renaît"
+ BRA_the_pheonix_reborn_desc: "Le Parti des Travailleurs est réformé, avec de nouveaux intérêts et objectifs pour l'avenir du Brésil."
+ BRA_pro_workers: "Pro-travailleurs"
+ BRA_pro_workers_desc: "Les travailleurs sont l’esprit principal du communisme, nous devons donc répondre à leurs intérêts."
+ BRA_popular_government: "Gouvernement populaire"
+ BRA_popular_government_desc: "Un gouvernement populaire peut faire tout ce qu’il veut puisque le peuple soutient toutes les actions et décisions que nous prenons."
+ BRA_crush_psdb: "Écraser la PSDB"
+ BRA_crush_psdb_desc: "Le PSDB est notre principal rival depuis la re-démocratisation. Il est temps de mettre fin à cette rivalité pour toujours !"
+ BRA_bring_back_dilma: "Ramenez Dilma"
+ BRA_bring_back_dilma_desc: "Dilma Vana Rousseff est une économiste et femme politique brésilienne, affiliée au Parti des travailleurs et 36e présidente du Brésil, ayant exercé ses fonctions de 2011 jusqu'à sa destitution pour destitution en 2016."
+ BRA_appease_south_american_socialists: "Apaiser les socialistes sud-américains"
+ BRA_appease_south_american_socialists_desc: "Le Venezuela est le principal bastion du socialisme sud-américain, nous devons nous aligner sur eux pour assurer notre succès mutuel."
+ BRA_industrialization_help_from_china: "Aide à l’industrialisation de la Chine"
+ BRA_industrialization_help_from_china_desc: "La Chine possède une industrie et une économie énormes. Si nous obtenons un certain soutien de leur part, nous pourrions avoir une meilleure économie."
+ BRA_new_communist_goverment: "Nouveau gouvernement communiste"
+ BRA_new_communist_goverment_desc: "Pour assurer la stabilité de la nation, le gouvernement doit être stable !"
+ BRA_five_year_plan: "Plans quinquennaux"
+ BRA_five_year_plan_desc: "Les modèles économiques libres des États occidentaux ne constituent pas l’avenir d’un État socialiste. Le retour à une économie planifiée, de préférence sous la forme de plans quinquennaux classiques de style soviétique, donnera au gouvernement une influence illimitée sur une économie auparavant incontrôlée."
  BRA_the_corruption_question: "End Corruption"
  BRA_the_corruption_question_desc: "Main socialists leaders of the past, like Lula, were very corrupt. We shouldn't make the same mistakes."
  BRA_empower_the_government: "Empower the Government"
