--- a/localisation/french/MD_focus_CHI_l_french.yml
+++ b/localisation/french/MD_focus_CHI_l_french.yml
@@ -1091,18 +1091,16 @@
  china.54.d: "La bataille du détroit de Taiwan touche à sa fin. La querelle qui a duré un demi-siècle s'est finalement terminée à ce moment-là. Les bottes militaires de l'Armée populaire de libération ont traversé le numéro 122, section 1, route sud de Chongqing. Si la planification de l’avenir de la région de Taiwan est devenue la priorité absolue, quels sont nos choix ?"
  china.54.a: "La région entière de Taiwan est finalement revenue dans les bras de la mère patrie."
  china.54.b: "Il existe d'autres plans."
- china.55.t: "La fin de la guerre pour le détroit de Taiwan !"
- china.55.d: "Le désaccord entre la Chine et les États-Unis sur la question de Taiwan se transforme inévitablement en une guerre à grande échelle. Maintenant que nous contrôlons toute l’île de Taiwan, les autorités de Taiwan se sont rendues. Si planifier l’avenir de Taiwan est devenu la priorité absolue, quels sont nos choix ?"
- china.55.a: "La région entière de Taiwan est finalement revenue dans les bras de la mère patrie."
- china.55.b: "Il existe d'autres plans."
+ china.55.t: ""
+ china.55.d: ""
+ china.55.a: ""
  china.56.t: "Fin de l’opération militaire spéciale sur la Mongolie extérieure !"
  china.56.d: "L’opération militaire spéciale sur la Mongolie extérieure touche à sa fin. Face à la féroce offensive du sud, les autorités d'Oulan-Bator sont vaincues sans suspense et le plateau mongol accueille son ancien maître. Si planifier l’avenir de la Mongolie extérieure est devenu la priorité absolue actuelle, quels sont nos choix ?"
  china.56.a: "La région entière de la Mongolie extérieure est finalement revenue dans les bras de la patrie."
  china.56.b: "Il existe d'autres plans."
- china.57.t: "Création de la RAS de Mongolie extérieure"
- china.57.d: "À mesure que les prairies devenaient de plus en plus étroitement liées au continent, les autorités mongoles se rendirent progressivement compte qu'elles ne pouvaient pas survivre indépendamment du continent chinois. Rejoindre le cercle économique chinois sous la forme d'une région administrative spéciale est devenu un bon choix."
- china.57.a: "S’ils veulent du décent, donnez-leur du décent ; s’ils ne veulent pas de décence, aidez-les à l’être."
- china.57.b: "Il existe d'autres plans."
+ china.57.t: "Bilibili en ligne"
+ china.57.d: "Bilibili, surnommé B Site, est un site Web de partage de vidéos basé à Shanghai où les utilisateurs peuvent soumettre, visualiser et ajouter des commentaires superposés sur des vidéos. Bilibili héberge des vidéos sur divers thèmes, notamment l'anime, la musique, la danse, la science et la technologie, les films, le théâtre, la mode et les jeux vidéo, mais il est également connu pour ses nombreuses parodies de style kuso réalisées par des créateurs de contenu sous-culturel.\n\nBilibili est connu pour son système de commentaires danmu défilant.\n\nBilibili propose également un service de diffusion en direct où le public peut interagir avec les streamers."
+ china.57.a: "Ce que tu aimes, c'est ta vie."
  china.58.t: "La Chine parvient à la réunification"
  china.58.d: "Des déserts du nord aux îles du sud, d'innombrables révolutionnaires ont versé leur vie et leur sang et ont réussi les uns après les autres. Jusqu’à aujourd’hui, la guerre civile a finalement pris fin et la patrie a été réunifiée.\n\nLe drapeau national flotte au vent et le chant de la victoire est si fort."
  china.58.a: "Chantez pour notre chère patrie, nous allons désormais devenir prospères et puissants."
@@ -1128,9 +1126,6 @@
  china.64.t: "La Chine atteint ses objectifs stratégiques régionaux"
  china.64.d: "Il était une fois le faible empire central qui était englouti par les puissances envahissantes. Après près de cent ans de lutte à mort, le peuple chinois a finalement complètement anéanti les barbares étrangers et éradiqué les traîtres, et a instauré la paix sous la domination chinoise dans la région."
  china.64.a: "Félicitations, commandant. Le peuple chinois n’oubliera jamais vos réalisations."
- china.65.t: "Bilibili en ligne"
- china.65.d: "Bilibili, surnommé B Site, est un site Web de partage de vidéos basé à Shanghai où les utilisateurs peuvent soumettre, visualiser et ajouter des commentaires superposés sur des vidéos. Bilibili héberge des vidéos sur divers thèmes, notamment l'anime, la musique, la danse, la science et la technologie, les films, le théâtre, la mode et les jeux vidéo, mais il est également connu pour ses nombreuses parodies de style kuso réalisées par des créateurs de contenu sous-culturel.\n\nBilibili est connu pour son système de commentaires danmu défilant.\n\nBilibili propose également un service de diffusion en direct où le public peut interagir avec les streamers."
- china.65.a: "Ce que tu aimes, c'est ta vie."
  china_news.1.t: "19e Congrès national du Parti communiste chinois"
  china_news.1.d: "Le 19e Congrès national s'est tenu au Grand Palais du Peuple, à Pékin, du 18 au 24 octobre 2017. Les préparatifs pour le 19e Congrès national ont débuté en 2016 et se sont terminés par une session plénière du Comité central quelques jours avant le Congrès. En 2016, les organisations locales et provinciales du parti ont commencé à élire des délégués au congrès ainsi qu'à recevoir et à amender des documents du parti. Pendant le congrès, une nouvelle idéologie directrice, baptisée Pensée de Xi Jinping sur le socialisme aux caractéristiques chinoises pour une nouvelle ère, a été inscrite dans la constitution du parti. C'était la première fois depuis la Pensée de Mao Zedong qu'un leader vivant du parti a inscrit dans la constitution du parti une idéologie portant son nom. Le Congrès a également souligné le renforcement du socialisme aux caractéristiques chinoises, la construction du parti et l'État de droit socialiste, et a fixé des échéanciers concrets pour atteindre les objectifs de développement, tels que la construction d'une société modérément prospère et la réalisation de la \"modernisation socialiste\"."
  china_news.1.a: "N'oubliez jamais votre intention initiale et gardez votre mission à l'esprit !"
@@ -1596,3 +1591,9 @@
  CHI_The_Northern_Shield_desc: "Dans l'histoire, l'ennemi de la Chine vient toujours du nord, il faut garder notre frontière éloignée de notre capitale, et reprendre notre bouclier nord.\n‘Restaurer le Xinjiang, c’est protéger la Mongolie, et protéger la Mongolie, c’est défendre la capitale..’"
  CHI_Western_Development_Strategy: "Stratégie de développement de l'Ouest"
  CHI_Western_Development_Strategy_desc: "Alors que la côte orientale de la Chine a connu un développement rapide suite à la politique de « réforme et d'ouverture » de Deng Xiaoping, l'ouest, beaucoup plus rural et peu peuplé, n'a pas connu la même amélioration rapide. Nous devons travailler dur pour corriger ces inégalités et parvenir à un développement équilibré entre toutes les régions."
+ china.6.t: ""
+ china.6.d: ""
+ china.6.a: ""
+ china.11.t: ""
+ china.11.d: ""
+ china.11.a: ""
