--- a/localisation/french/MD_focus_USA_l_french.yml
+++ b/localisation/french/MD_focus_USA_l_french.yml
@@ -1,17 +1,17 @@
 ﻿l_french:
  united_states_focus: "Priorités nationales des États-Unis"
- USA_focus_ending_clintonomics: "The Ending Stages of Clintonomics"
- USA_focus_ending_clintonomics_desc: "The ending months of the administration are upon us and as such we should start gearing up for the next election."
- USA_focus_enjoy_surplus: "Enjoying a Continued Surplus"
- USA_focus_enjoy_surplus_desc: "The budget is in the green and now we can watch as the money rolls in."
- USA_focus_rise_internet: "The Rise of the Internet"
- USA_focus_rise_internet_desc: "The dawn of a new age is upon us, as such we must embrace the newest forms of technology and stay ahead of the game."
- USA_focus_limited_indust_expansion: "Limited Industrial Expansion"
- USA_focus_limited_indust_expansion_desc: "The administration isn’t over quiet yet, as such we must leave a mark and target economic growth in the Blue Collar heartland that is the Rust Belt."
- USA_focus_late_renew_investments: "Late Renewable Investments"
- USA_focus_late_renew_investments_desc: "The scares of the past with the depleting rate of fossil fuels is a good cause for concern, lest we be too reliant on one such form of energy, we are certainly doomed to adapt to the changing world when the time comes."
- USA_focus_43rd_administration: "Gearing up for the 43 Administration"
- USA_focus_43rd_administration_desc: "The time has come for me to leave office, but the party can still win, as such we must direct these last weeks to the hopeful securing of another term with our party at the helm."
+ USA_focus_ending_clintonomics: "Les dernières étapes de la clintonomique"
+ USA_focus_ending_clintonomics_desc: "Les derniers mois de l’administration approchent et nous devrions donc commencer à nous préparer pour les prochaines élections."
+ USA_focus_enjoy_surplus: "Bénéficier d'un excédent continu"
+ USA_focus_enjoy_surplus_desc: "Le budget est dans le vert et nous pouvons désormais observer l’arrivée de l’argent."
+ USA_focus_rise_internet: "L'essor d'Internet"
+ USA_focus_rise_internet_desc: "L’aube d’une nouvelle ère est à nos portes, nous devons donc adopter les dernières formes de technologie et garder une longueur d’avance."
+ USA_focus_limited_indust_expansion: "Expansion industrielle limitée"
+ USA_focus_limited_indust_expansion_desc: "L’administration n’est pas encore trop silencieuse, c’est pourquoi nous devons laisser une marque et cibler la croissance économique au cœur du pays des cols bleus qu’est la Rust Belt."
+ USA_focus_late_renew_investments: "Investissements renouvelables tardifs"
+ USA_focus_late_renew_investments_desc: "Les craintes du passé liées au rythme d’épuisement des combustibles fossiles sont une bonne source d’inquiétude. De peur que nous ne soyons trop dépendants d’une telle forme d’énergie, nous sommes certainement condamnés à nous adapter au monde en évolution le moment venu."
+ USA_focus_43rd_administration: "Se préparer pour la 43e Administration"
+ USA_focus_43rd_administration_desc: "Le moment est venu pour moi de quitter mes fonctions, mais le parti peut encore gagner, c'est pourquoi nous devons consacrer ces dernières semaines à l'espoir d'obtenir un autre mandat avec notre parti à la tête."
  USA_focus_2000_democrats: "2000 Democrat Victory"
  USA_focus_2000_democrats_desc: "Through determination we have won over our Republican Adversaries."
  USA_focus_early_green_energy_invest: "Early Green Energy Investments"
