--- a/localisation/simp_chinese/MD_focus_CHI_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_CHI_l_simp_chinese.yml
@@ -1457,10 +1457,9 @@
  china.54.d: "台海之战即将结束。长达半个世纪的恩怨在这一刻终于结束了。解放军军靴踏破重庆南路一段122号。如果规划台湾地区的未来成为当前的当务之急，我们的选择是什么？"
  china.54.a: "整个台湾地区终于回到了祖国的怀抱"
  china.54.b: "我们有别的想法"
- china.55.t: "台海之战结束！"
- china.55.d: "中美在台湾问题上的分歧已不可避免地发展为全面战争。现在我们已经控制了整个台湾岛，台湾当局已经投降了。如果规划台湾的未来成为当前的当务之急，我们该如何选择？"
- china.55.a: "整个台湾地区终于回到了祖国的怀抱."
- china.55.b: "我们有别的想法"
+ china.55.t: ""
+ china.55.d: ""
+ china.55.a: ""
  china_news.1.b: "社会主义的新时代！"
  china_news.2.b: "盛大的阅兵式。"
  china_news.21.b: "难以置信！"
@@ -1475,9 +1474,9 @@
  china.56.d: "外蒙古特别军事行动即将结束。面对来自南方的猛烈攻势，乌兰巴托当局毫无悬念地惨败，蒙古高原迎来了昔日的主人。如果规划外蒙古的未来成为当前的当务之急，我们的选择是什么？"
  china.56.a: "整个外蒙古地区终于回到了祖国的怀抱"
  china.56.b: "我们有别的想法"
- china.57.t: "外蒙古特别行政区成立"
- china.57.d: "随着草原与大陆的联系越来越紧密，蒙古当局逐渐意识到自己无法离开中国大陆而生存。以特别行政区的形式加入中国经济圈已成为一个不错的选择。"
- china.57.a: "如果他们想体面，就给他们体面；如果他们不想体面，就帮他们体面。"
+ china.57.t: "哔哩哔哩上线"
+ china.57.d: "哔哩哔哩，昵称B站，是一个位于上海的视频共享网站，用户可以在其中提交、查看视频并添加叠加评论。哔哩哔哩提供各种主题的视频，包括动漫、音乐、舞蹈、科技、电影、戏剧、时尚和视频游戏，但它也因亚文化内容创作者大量恶搞风格的模仿而闻名。\n\n哔哩哔哩以其滚动弹幕评论系统而闻名。\n\n哔哩哔哩还提供直播服务，观众可以与主播互动。"
+ china.57.a: "你所热爱的，就是你的生活。"
  china_news.19.d_war: "胜利的中国人宣布建立外蒙古特别行政区，并大肆宣传这一举动，这标志着中国有能力让步和进行调解。而这个新的特别行政区也许最终会脱离中国统治，但至少在目前状态下，它是无能为力的。"
  china.58.t: "中国实现统一"
  china.58.d: "从北方的大漠到南方的海岛，无数革命者抛头颅洒热血，前仆后继继往开来。直到今天，内战终于结束，祖国实现了统一。\n\n五星红旗迎风飘扬，胜利歌声多么响亮。"
@@ -1486,7 +1485,6 @@
  china.19.a: "现在，我们合二为一了！"
  china.19.b: "抵抗反击！"
  china.20.b: "仍然需要更多准备。"
- china.57.b: "我们有别的想法"
  china.59.t: "台湾通过第二共和国宪法"
  china.59.d: "台湾当局悍然通过第二共和宪法，将领土限制在台湾、澎湖、金门、马祖，以实现合法独立。这种无耻行径违反了《反分裂国家法》，全国人大授权国务院、中央军委使用武力解决当前事件。"
  china.59.a: "还我台湾！即刻开战！"
@@ -1579,9 +1577,6 @@
  china.64.t: "中国完成地区战略目标"
  china.64.d: "曾几何时，积弱的中央帝国被蜂拥而来的列强蚕食鲸吞，中国人民在经历了近百年的生死搏斗，终于彻底扫平四夷攘除奸凶，实现了区域内的中国治下的和平。"
  china.64.a: "祝贺你，指挥官。中国人民不会忘记你的功绩。"
- china.65.t: "哔哩哔哩上线"
- china.65.d: "哔哩哔哩，昵称B站，是一个位于上海的视频共享网站，用户可以在其中提交、查看视频并添加叠加评论。哔哩哔哩提供各种主题的视频，包括动漫、音乐、舞蹈、科技、电影、戏剧、时尚和视频游戏，但它也因亚文化内容创作者大量恶搞风格的模仿而闻名。\n\n哔哩哔哩以其滚动弹幕评论系统而闻名。\n\n哔哩哔哩还提供直播服务，观众可以与主播互动。"
- china.65.a: "你所热爱的，就是你的生活。"
  CHI_QQ: "QQ"
  CHI_QQ_desc: "一款自主可控的即时通讯软件是非常有必要的，也能满足人们相互沟通的需求。"
  CHI_taiwan_strait_war: "台海之战爆发"
@@ -1596,3 +1591,9 @@
  CHI_The_Northern_Shield_desc: "历史上，中国的敌人总是来自北方，必须让我们的边境远离我们的首都，夺回我们的北境之盾。\n‘是故重新疆者，所以保蒙古；保蒙古者，所以卫京师。’"
  CHI_Western_Development_Strategy: "西部大开发战略"
  CHI_Western_Development_Strategy_desc: "虽然中国东部沿海地区在邓小平“改革开放”政策下取得了快速发展，但人口稀少、农村人口较多的西部地区却没有取得同样的快速发展。我们应该努力纠正这种不平衡现象，实现各地区均衡发展。"
+ china.6.t: ""
+ china.6.d: ""
+ china.6.a: ""
+ china.11.t: ""
+ china.11.d: ""
+ china.11.a: ""
