--- a/localisation/braz_por/MD_focus_CHI_l_braz_por.yml
+++ b/localisation/braz_por/MD_focus_CHI_l_braz_por.yml
@@ -1093,18 +1093,16 @@
  china.54.d: "A Batalha do Estreito de Taiwan está chegando ao fim. A rivalidade que durou meio século finalmente terminou neste momento. As botas militares do Exército de Libertação Popular romperam o nº 122, Seção 1, Chongqing South Road. Se planear o futuro da área de Taiwan se tornou a principal prioridade actual, quais são as nossas escolhas?"
  china.54.a: "Toda a área de Taiwan finalmente voltou ao abraço da pátria mãe."
  china.54.b: "Existem outros planos."
- china.55.t: "Fim da guerra pelo Estreito de Taiwan!"
- china.55.d: "O desacordo entre a China e os Estados Unidos sobre a questão de Taiwan evoluiu inevitavelmente para uma guerra em grande escala. Agora que controlamos toda a ilha de Taiwan, as autoridades taiwanesas renderam-se. Se planear o futuro de Taiwan se tornou a principal prioridade actual, quais são as nossas escolhas?"
- china.55.a: "Toda a área de Taiwan finalmente voltou ao abraço da pátria mãe."
- china.55.b: "Existem outros planos."
+ china.55.t: ""
+ china.55.d: ""
+ china.55.a: ""
  china.56.t: "Fim da Operação Militar Especial na Mongólia Exterior!"
  china.56.d: "A operação militar especial sobre a Mongólia Exterior está a chegar ao fim. Enfrentando a feroz ofensiva do sul, as autoridades de Ulaanbaatar foram derrotadas sem qualquer suspense, e o planalto mongol deu início ao seu antigo mestre. Se planear o futuro da Mongólia Exterior se tornou a principal prioridade actual, quais são as nossas escolhas?"
  china.56.a: "Toda a região da Mongólia Exterior finalmente voltou ao abraço da pátria mãe."
  china.56.b: "Existem outros planos."
- china.57.t: "Estabelecimento da RAE da Mongólia Exterior"
- china.57.d: "À medida que a pradaria se tornou cada vez mais ligada ao continente, as autoridades mongóis perceberam gradualmente que não poderiam sobreviver independentemente do continente chinês. Juntar-se ao círculo económico da China sob a forma de uma região administrativa especial tornou-se uma boa escolha."
- china.57.a: "Se eles querem algo decente, dê-lhes algo decente; se eles não querem ser decentes, ajude-os a ser decentes."
- china.57.b: "Existem outros planos."
+ china.57.t: "Bilíbili on-line"
+ china.57.d: "Bilibili, apelidado de Site B, é um site de compartilhamento de vídeos com sede em Xangai, onde os usuários podem enviar, visualizar e adicionar comentários sobrepostos aos vídeos. Bilibili hospeda vídeos sobre vários temas, incluindo anime, música, dança, ciência e tecnologia, filmes, drama, moda e videogames, mas também é conhecido por suas extensas paródias no estilo kuso feitas por criadores de conteúdo subcultural.\n\nBilibili é conhecido por seu sistema de comentários danmu de rolagem.\n\nBilibili também oferece um serviço de transmissão ao vivo onde o público pode interagir com streamers."
+ china.57.a: "O que você ama é a sua vida."
  china.58.t: "China alcança a reunificação"
  china.58.d: "Dos desertos do norte às ilhas do sul, incontáveis ​​revolucionários derramaram suas vidas e sangue, e tiveram sucesso um após o outro. Até hoje, a guerra civil finalmente terminou e a pátria foi reunificada.\n\nA bandeira nacional tremula ao vento e a canção da vitória é muito alta."
  china.58.a: "Cante pela nossa querida pátria, avançaremos para a prosperidade e o poder a partir de agora."
@@ -1130,9 +1128,6 @@
  china.64.t: "China conclui objetivos estratégicos regionais"
  china.64.d: "Era uma vez, o fraco império central foi engolido pelas potências fervilhantes. Depois de quase cem anos de luta de vida ou morte, o povo chinês finalmente eliminou completamente os bárbaros estrangeiros e erradicou os traidores, e alcançou a paz sob o domínio da China na região."
  china.64.a: "Parabéns, Comandante. O povo chinês nunca esquecerá as suas conquistas."
- china.65.t: "Bilíbili on-line"
- china.65.d: "Bilibili, apelidado de Site B, é um site de compartilhamento de vídeos com sede em Xangai, onde os usuários podem enviar, visualizar e adicionar comentários sobrepostos aos vídeos. Bilibili hospeda vídeos sobre vários temas, incluindo anime, música, dança, ciência e tecnologia, filmes, drama, moda e videogames, mas também é conhecido por suas extensas paródias no estilo kuso feitas por criadores de conteúdo subcultural.\n\nBilibili é conhecido por seu sistema de comentários danmu de rolagem.\n\nBilibili também oferece um serviço de transmissão ao vivo onde o público pode interagir com streamers."
- china.65.a: "O que você ama é a sua vida."
  china_news.1.t: "19º Congresso Nacional do Partido Comunista da China"
  china_news.1.d: "O 19º Congresso Nacional foi realizado no Grande Salão do Povo, Pequim, entre 18 e 24 de outubro de 2017. Os preparativos para o 19º Congresso Nacional começaram em 2016 e terminaram com uma sessão plenária do Comitê Central alguns dias antes do Congresso. Em 2016, as organizações partidárias locais e provinciais começaram a eleger delegados para o congresso, além de receber e emendar documentos do partido. Durante o congresso, uma nova ideologia orientadora, rotulada como Pensamento de Xi Jinping sobre o Socialismo com Características Chinesas para uma Nova Era, foi incorporada à constituição do partido. Marcou a primeira vez desde o Pensamento de Mao Zedong que um líder do partido em vida incorporou à constituição do partido uma ideologia com seu nome. O Congresso também enfatizou o fortalecimento do socialismo com características chinesas, a construção do partido e o Estado de direito socialista, além de estabelecer cronogramas concretos para atingir metas de desenvolvimento, como construir uma sociedade moderadamente próspera e alcançar a \"modernização socialista\"."
  china_news.1.a: "Nunca esqueça sua intenção original e mantenha sua missão em mente!"
@@ -1596,3 +1591,9 @@
  CHI_Xiaomi_Vehicle: "Veículo Xiaomi"
  CHI_Western_Development_Strategy: "Estratégia de Desenvolvimento Ocidental"
  CHI_Western_Development_Strategy_desc: "Embora o leste costeiro da China tenha registado um rápido desenvolvimento na sequência da política de “reforma e abertura” de Deng Xiaoping, o oeste, muito mais rural e escassamente povoado, não viu a mesma melhoria rápida. Deveríamos trabalhar arduamente para corrigir esta desigualdade e alcançar um desenvolvimento equilibrado entre todas as regiões."
+ china.6.t: ""
+ china.6.d: ""
+ china.6.a: ""
+ china.11.t: ""
+ china.11.d: ""
+ china.11.a: ""
