--- a/localisation/braz_por/MD_focus_SOV_l_braz_por.yml
+++ b/localisation/braz_por/MD_focus_SOV_l_braz_por.yml
@@ -246,9 +246,9 @@
  SOV_counter_euromaidan_desc: "Eventos recentes na Ucrânia mostraram que ela está se afastando cada vez mais de nossa órbita. Precisamos deixá-los claros sobre quem são seus verdadeiros amigos."
  SOV_wait_what: "...Pavel Grudinin?"
  SOV_wait_what_desc: "A tocha da liderança do KPRF passou para a próxima geração."
- SOV_puppet_zhirinovsky: "Puppet Zhirinovsky"
+ SOV_puppet_zhirinovsky: "Fantoche Zhirinovsky"
  SOV_puppet_zhirinovsky_desc: "Zhirik seria um bom fantoche político, ele está na Duma há muito tempo e sabe como lidar com os negócios."
- SOV_puppet_grudinin: "Puppet Zyuganov"
+ SOV_puppet_grudinin: "Fantoche Zyuganov"
  SOV_puppet_grudinin_desc: "Zyuganov seria um bom fantoche político, ele é amado pelo povo e não tem problemas com o establishment de Putin."
  SOV_empower_loyal_opposition: "Empoderar a Oposição Leal"
  SOV_empower_loyal_opposition_desc: "Existem outros candidatos que podem fazer a vontade do Kremlin, são familiares e não vão causar problemas."
@@ -1185,9 +1185,9 @@
  SOV_revaluation_of_the_ruble_desc: "Na última década, o valor da moeda russa, o Rublo, caiu devido a decisões pouco prudentes de política comercial externa, bem como à inadequada prevenção de efeitos inflacionários. Precisamos restaurar o valor do Rublo da melhor forma possível."
  SOV_european_interaction_plan: "Plano de Interação Europeia"
  SOV_european_interaction_plan_desc: "Precisamos de um plano para interagir adequadamente com as potências europeias que têm relações econômicas vitais conosco (e às vezes também impõem sanções a nós)."
- SOV_nord_stream: "Nord Stream"
+ SOV_nord_stream: "Fluxo Norte"
  SOV_nord_stream_desc: "Nord Stream é um projeto de gasoduto através do Mar Báltico até um dos principais destinatários de gás da Rússia, a Alemanha. Um sistema assim permite que a Rússia e a Alemanha contornem os países da Europa Oriental para suas transferências de gás, dando à Rússia liberdade para pressionar esses países e à Alemanha a liberdade para ignorar a pressão."
- SOV_south_stream: "South Stream"
+ SOV_south_stream: "Córrego Sul"
  SOV_south_stream_desc: "Um equivalente ao Nord Stream, o gasoduto South Stream é um programa de gasoduto que vai da região de Rostov na Rússia, através do Mar Negro. O gasoduto passará pela Bulgária e se dividirá em direção ao norte em direção à Áustria e ao sul em direção à Itália."
  SOV_uaz: "UAZ"
  SOV_uaz_desc: "A UAZ é uma fabricante de automóveis sediada em Ulyanovsk, Rússia, que produz veículos todo-o-terreno, ônibus e caminhões. Ela faz parte do grupo automotivo Sollers desde 2000."
@@ -1263,7 +1263,7 @@
  SOV_expand_economic_policy_desc: "As economias modernas lidam com tecnologias avançadas, especificamente com computadores, IA e energias alternativas. A Rússia carece desses componentes, então precisamos fazer os investimentos apropriados."
  SOV_southern_arms_exports: "Projeto Khazri"
  SOV_southern_arms_exports_desc: "Exportar armas para nossos aliados no subcontinente indiano pode ajudar a expandir nossa influência na região."
- SOV_nord_stream_2: "Nord Stream 2"
+ SOV_nord_stream_2: "Fluxo Norte 2"
  SOV_nord_stream_2_desc: "Nord Stream 2 é uma expansão do gasoduto Nord Stream para a Alemanha. Isso garantirá que os alemães se tornem ainda mais dependentes de nosso gás e, consequentemente, irritará ainda mais o leste europeu, pois nos dará mais liberdade para intimidá-los."
  SOV_manufacturing_improvements: "Melhorias na Manufatura"
  SOV_manufacturing_improvements_desc: "As antigas máquinas soviéticas podem fazer apenas um trabalho limitado com qualidade limitada. Precisamos de novos métodos, máquinas e processos."
@@ -1318,7 +1318,7 @@
  SOV_crush_cult_of_stalin: "Condenar o Culto a Stalin"
  SOV_crush_cult_of_stalin_desc: "Muitos de nossos compatriotas ainda acreditam que Stalin foi o maior líder na história da Rússia. Devemos esmagar esse culto e fazer com que o povo russo acredite em nossos líderes atuais e futuros!"
  SOV_rostech_idea: "Rostech"
- SOV_kbp_idea: "KBP Instrument Design Bureau"
+ SOV_kbp_idea: "Bureau de design de instrumentos KBP"
  SOV_rosoboronprom_idea: "Oboronprom"
  SOV_kalashnikov_idea: "Kalashnikov Concern"
  russia_governorate.1.t: "Conclusão da Integração do Governadorado de Dagestão"
@@ -1401,7 +1401,7 @@
  russia.8.t: "Ucrânia recua!"
  russia.8.d: "O governo ucraniano é forçado a recuar! A Crimeia é nossa!"
  russia.8.o1: "Excelente."
- threat_SOV_annexiation_of_crimea: "Annexation of Crimea"
+ threat_SOV_annexiation_of_crimea: "Anexação da Crimeia"
  russia.9.t: "A Ucrânia Aceita Nosso Desafio!"
  russia.9.d: "Contra todas as expectativas, a Ucrânia lutará pela Crimeia e, em resposta, nossos comandantes já deram a ordem de avançar. Começamos algo que não será tão fácil de parar."
  russia.9.o1: "Vamos lá."
@@ -1429,7 +1429,7 @@
  russia.14.d: "A Rússia ofereceu investir em nosso país! Eles ofereceram construir um pouco de nossa base industrial às suas próprias custas. No entanto, o lado negativo é que eles ganham mais controle sobre nosso governo."
  russia.14.o1: "Poderíamos Usar Algumas Fábricas"
  russia.14.o2: "Russos, Fiquem Longe!"
- russia.15.t: "Anti-War Protests"
+ russia.15.t: "Protestos Anti-Guerra"
  russia.15.d: "A operação especial que lançamos levou a manifestações anti-guerra em todo o país. Os protestantes escolheram a bandeira branca-azul-branca como seu símbolo, simbolizando uma Rússia sem sangue e ambições imperiais."
  russia.15.o1: "A Bandeira Deles Parece com um Carro OMON"
  russia.16.t: "\"Primavera Russa\" em Donbass"
@@ -1547,19 +1547,19 @@
  russia.33.o1: "Hmm..."
  russia.34.t: "Golpe Ucraniano Bem-sucedido!"
  russia.34.d: "Relatos de Kiev indicam que as forças pró-russas conseguiram garantir a administração e estabelecer um governo leal."
- russia.34.o1: "Ura!"
+ russia.34.o1: "URA!"
  russia.35.t: "Golpe Ucraniano Falhou!"
  russia.35.d: "Relatos de Kiev indicam que as forças pró-russas falharam em garantir a administração e estabelecer um governo leal. Todos eles foram presos e o governo ucraniano emitiu um protesto."
- russia.35.o1: "Blyat."
+ russia.35.o1: "Blat."
  russia_news.9.t: "Golpe Russo na Ucrânia Bem-sucedido."
  russia_news.9.d: "Relatos de Kiev indicam que as forças pró-russas conseguiram garantir a administração e estabelecer um governo leal. A Rússia declara que não interveio nem ajudou o novo governo de nenhuma forma."
  russia_news.9.o1: "Russos sendo russos."
  russia_news.9.o2: "Nossos irmãos escolheram o caminho certo!"
- russia_news.9.o3: "WTF."
+ russia_news.9.o3: "O que diabos?!"
  russia_news.10.t: "Golpe Russo na Ucrânia Falhou."
  russia_news.10.d: "Relatos de Kiev indicam que as forças pró-russas falharam em garantir a administração e estabelecer um governo leal. A Rússia declara que não interveio nem ajudou os rebeldes de nenhuma forma."
  russia_news.10.o1: "Russos sendo russos."
- russia_news.10.o2: "Blyat!"
+ russia_news.10.o2: "Blat."
  russia_news.10.o3: "Malditos russos."
  russia.30.t: "Incidente na Usina Hidrelétrica Sayano-Shushinskaya"
  russia.30.d: "Esta manhã, ocorreu um desastre em nossa maior usina hidrelétrica. Uma das turbinas colapsou de forma catastrófica, resultando na morte de 75 membros da equipe e em danos graves à própria barragem. O relatório mais recente indica que 9 de 10 turbinas foram destruídas ou danificadas. Precisamos responder a este desastre o mais rápido possível."
