--- a/localisation/braz_por/MD_techs_l_braz_por.yml
+++ b/localisation/braz_por/MD_techs_l_braz_por.yml
@@ -3691,7 +3691,7 @@
  SOV_GNSS1: "GLONASS Block I"
  SOV_GNSS2: "GLONASS Block IIa"
  SOV_GNSS3: "GLONASS Block IIb"
- SOV_GNSS4: "GLONASS Block IIv"
+ SOV_GNSS4: "GLONASS-M"
  SOV_GNSS5: "GLONASS-K"
  SOV_GNSS6: "GLONASS-K2"
  SOV_GNSS7: "GLONASS-V"
