--- a/localisation/french/MD_focus_ABK_l_french.yml
+++ b/localisation/french/MD_focus_ABK_l_french.yml
@@ -159,7 +159,7 @@
  ABK_arm_friend_desc: "Il est temps d'établir des liens amicaux avec l'Arménie"
  ABK_arm_battalion: "Revivez le bataillon Baghramyan"
  ABK_arm_battalion_desc: "Il est temps de relancer le bataillon Baghramyan, symbole de notre amitié avec l'Arménie dans la lutte contre la Géorgie"
- ABK_abkhazvozvrashenstroy: "Establish the foundation of \"Abkhazvozvrashenstroy\""
+ ABK_abkhazvozvrashenstroy: "Établir la fondation de \"Abkhazvozvrashenstroy\""
  ABK_abkhazvozvrashenstroy_desc: "Ce fonds sera la clé de la nouvelle économie de l'Abkhazie, avec son aide, nous pourrons attirer des investissements pour notre pays du monde entier"
  ABK_parli_dead: "Traiter avec le Parlement"
  ABK_parli_dead_desc: "Il est temps d'éliminer cette relique de la démocratie"
