--- a/localisation/french/MD_focus_AZE_l_french.yml
+++ b/localisation/french/MD_focus_AZE_l_french.yml
@@ -90,8 +90,8 @@
  AZE_aze_mil_network_desc: "Nous devons nous assurer que notre réseau militaire nous aide à produire tous les biens dont nous avons besoin."
  AZE_aze_escalate_the_incident: "Escalader les incidents"
  AZE_aze_escalate_the_incident_desc: "Le récent conflit et les affrontements près de notre frontière avec l'Iran peuvent être intensifiés si nous le souhaitons."
- AZE_aze_anew_aliev: "A New Aliev"
- AZE_aze_anew_aliev_desc: "Ilham Aliev will lead us now, lets hope he does well"
+ AZE_aze_anew_aliev: "Un nouvel Aliev"
+ AZE_aze_anew_aliev_desc: "Ilham Aliyev nous dirigera maintenant, espérons qu'il s'en sortira bien"
  AZE_aze_supress_protests: "Réprimer les protestations"
  AZE_aze_supress_protests_desc: "Les récentes protestations ne sont le fait que de quelques braillards qui essaient d'attirer l'attention, il faut arrêter cela."
  AZE_aze_cult_of_father: "Culte du Père de la Nation"
@@ -937,5 +937,5 @@
  karabakh_readiness_low: "Préparation à la guerre faible"
  karabakh_readiness_medium: "Préparation à la guerre moyenne"
  karabakh_readiness_high: "Préparation à la guerre élevée"
- AZE_Army_maneuvers: "Army Maneuvers"
- AZE_Army_maneuvers_desc: "Army needs to flex its muscles from time to time to not get rusty"
+ AZE_Army_maneuvers: "Manœuvres de l'armée"
+ AZE_Army_maneuvers_desc: "L’armée doit de temps en temps montrer ses muscles pour ne pas rouiller"
