--- a/localisation/polish/MD_custom_achievements_l_polish.yml
+++ b/localisation/polish/MD_custom_achievements_l_polish.yml
@@ -196,9 +196,9 @@
  ace_military_junta_are_in_power_or_coalition_tt: "§Y$generic.Nat_Autocracy$§! są w koalicji rządzącej."
  ace_fascists_are_in_power_or_coalition_tt: "§Y$generic.Nat_Fascism$§! są w koalicji rządzącej."
  africa_paradis_NAME: "Africa Paradis"
- africa_paradis_DESC: "As an African country, form the United States of Africa and have a higher GDP than any European country."
- africa_paradis_usa_tt: "Has formed the United States of Africa"
- africa_paradis_gdp_tt: "Our GDP is higher than any European country"
+ africa_paradis_DESC: "Jako afrykański kraj, utwórz Stany Zjednoczone Afryki i miej wyższe PKB niż jakikolwiek europejski kraj"
+ africa_paradis_usa_tt: "Utworzył Stany Zjednoczone Afryki "
+ africa_paradis_gdp_tt: "Nasze GDP wyższe niż jakikolwiek europejski kraj"
  libya_order_of_republic_NAME: "Libyan Order of the Republic"
  libya_order_of_republic_DESC: "Awarded for heads of state; Fulfill your service to the state of Libya by playing until 2020.\n\n\"There is no state with a democracy except Libya on the whole planet.\"\n\n- Muammar Gaddafi"
  libya_order_of_jihad_NAME: "Libyan Order of the Jihad"
